Broken build on arm/arm64 with older kernel (missing __NR_statx, __NR_rseq)
Categories
(Core :: Security: Process Sandboxing, defect, P2)
Tracking
()
People
(Reporter: msirringhaus, Assigned: msirringhaus)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I currently get a broken build on arm/arm64 on systems with older kernels:
[ 5479s] 87:35.87 /home/abuild/rpmbuild/BUILD/firefox-86.0/security/sandbox/linux/SandboxFilter.cpp: In member function"virtual mozilla::SandboxPolicyBase::ResultExpr mozilla::SandboxPolicyCommon::EvaluateSyscall(int) const":
[ 5479s] 87:35.87 /home/abuild/rpmbuild/BUILD/firefox-86.0/security/sandbox/linux/SandboxFilter.cpp:594:14: error: "__NR_statx" was not declared in this scope; did you mean "__lxstat"?
and the same for __NR_rseq.
I'm guessing its because of bug 1651701.
Comment 5 says that the in-tree definitions solve this. But only for x86(_64).
Currently, I'm running a test build that adds those definitions to
security/sandbox/chromium/sandbox/linux/system_headers/arm_linux_syscalls.h
security/sandbox/chromium/sandbox/linux/system_headers/arm64_linux_syscalls.h
using the definitions from here and here
Seems to compile fine, but an actual runtime test is still pending. Trying to do it today.
Is there anything else I need to be aware of? Otherwise, I would submit the patch.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
My manual runtime test seemed to be fine.
Comment 3•5 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:msirringhaus, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 5•5 years ago
|
||
| bugherder | ||
Comment 6•5 years ago
|
||
Is this something you'd want to see backported to Beta/ESR? Seems pretty low-risk if it helps downstream.
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
I currently don't see the build failure on 78 ESR, so at least for me backporting is not needed.
Thanks for the offer, though!
Comment 8•5 years ago
|
||
The patch landed in nightly and beta is affected.
:msirringhaus, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Updated•5 years ago
|
Description
•