Bug 1696359 - Broken build on arm/arm64 with older kernel (missing __NR_statx, __NR_rseq) r=jld

Differential Revision: https://phabricator.services.mozilla.com/D107206